<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Position Locator</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_splash_activity" translatable="false">splash_activity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="ivGPS">Location</string>
    <string name="tvGPS" translatable="false">GPS</string>
    <string name="ivWiFi" translatable="false">WiFi</string>
    <string name="ivArrowDown" translatable="false">Arrow Down</string>
    <string name="tvNetwork" translatable="false">Network</string>
    <string name="tvWifi" translatable="false">Wi-Fi</string>
    <string name="ivNetLocation">Network Location</string>
    <string name="ivWiFiDesc" translatable="false">Network Location</string>
    <string name="title_activity_invate" translatable="false">Invate</string>
    <string name="InvetionDescription">Share the generated code with others to join your group.</string>
    <string name="tvzTrackerText" translatable="false">TsTracker</string>
    <string name="ivCloseMapString" translatable="false">CloseMap</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_join_group" translatable="false">JoinGroupActivity</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>
    <string name="personname">Your name</string>
    <string name="PersonImage" translatable="false">PersonImage</string>
    <string name="title_activity_groups" translatable="false">GroupsActivity</string>
    <string name="title_activity_about" translatable="false">about</string>
    <string name="title_activity_places" translatable="false">Places</string>
    <string name="title_activity_map_places" translatable="false">Map</string>
    <string name="GroupLabel">Group</string>
    <string name="JoinGroup">Join Group</string>
    <string name="EnterJoinCode">ENTER CODE HERE!</string>
    <string name="InviteBuddies">Invite Others to your group.</string>
    <string name="LeaveGroupMessage">Are you sure you want to leave this group!? All the messages will be deleted.</string>
    <string name="title_activity_purchase" translatable="false">PurchaseActivity</string>
    <string name="btnPurchase">Purchase</string>
    <string name="btnPurchaseWaitMessage">We are getting plans and items.Please wait!!!</string>
    <string name="gpsIsOff">GPS is off. Turn it on to locate you.</string>
    <string name="GoogleMapTitle" translatable="false">TsTracker</string>
    <string name="haveNoLocationData">Currently have no location data;Still trying to get.</string>
    <string name="InvationMessage"> invited you to join his/her group  in TsTracker. If you don\'t have TsTracker, you can download it from here http://www.site.com. Your code is : </string>
<string name="DontTranslate1" translatable="false">chatIDTag</string>
    <string name="DontTranslate2" translatable="false">personIDTag</string>
    <string name="SwipeToRight">Swipe to right to see menu</string>
    <string name="DaysToRecharge">Days left to ran out your credit.</string>
    <string name="creditAmount"> Your credit is </string>
    <string name="groupCOunts"> person(s) are in your group.</string>
    <string name="NewMessage">New message from </string>
    <string name="imageDidntLoad">Image didn\'t load. </string>
    <string name="somethingWrong">Something wrong happened.</string>
    <string name="send">Send</string>
    <string name="joinGroups">Join Group</string>
    <string name="cancel">Cancel</string>
    <string name="someone">Someone</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="successful">Successful</string>
    <string name="ok">Okay</string>
    <string name="duplicatename">Duplicated name</string>
    <string name="justadminsee">My group members can not see each other.</string>
    <string name="noROute">Route not found.Give Address like this (iran,tehran,tehran,milad)</string>
    <string name="userProfile">User Profile</string>
    <string name="NoCredit">You have no credit. Please recharge to use application.</string>
    <string name="internetConnectivityError">No Internet Connection. Please check your internet connection.</string>
    <string name="deviceREgistered">Device Registered</string>
    <string name="devicesAlreadyRegistered">Devices Already Registered</string>
    <string name="InvalidCOde">Invalid Code</string>
    <string name="appShortDescribe">Track your family, employees, cars, phones, patients and enjoy chat.</string>
    <string name="map">Map</string>
    <string name="groupsToChat">Groups To Chat</string>
    <string name="chargeMyAccount">Charge My Account</string>
    <string name="placesAndAreas">Places And Areas</string>
    <string name="about">Help And About</string>
    <string name="pause">Pause</string>
    <string name="clickBackAgain"> Please Click Back Again To Exit</string>
    <string name="hour">Hour</string>
    <string name="chooseName">Choose A Name</string>
    <string name="takephoto"> Take a photo</string>
    <string name="chooseFromLibrary">Choose from library</string>
    <string name="imageUploaded">Image uploaded on server.</string>
    <string name="madeBy"> Produced by Tarahan Samane Ide Pouya \n Developers:  \n Morteza Zarrin Derafsh\n Ali Heidari \n All the icons made by Freepik from www.flaticon.com </string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="setting">Settings</string>
    <string name="codeDuration">Your generated key is valid for 15 minutes.</string>
    <string name="joinGroupsUnlimited">You can join groups unlimited.</string>
    <string name="groups">Groups</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="charge">Charge</string>
    <string name="openChat">Open Chat</string>
    <string name="txtPurchaseMessage">Purchase to use unique application features longer.</string>
    <string name="KickUser">Are you sure you want remove user from your group?</string>
    <string name="dontusesymbol">Do not use ! , ~ # $ % ^ * ( )</string>
    <string name="wait">Please Wait!</string>
    <string name="geofenceadded">New Area Added</string>
    <string name="help">Every phone has a group and owner should pay for group members. You can charge your account.To join a group, owner should create a code using chat activity(In his/her group) with + button and share it using any social application. Then by entering code in group activity by + button (Note the generated code is valid for 15 min). \n You can see yourself and others on map(Note group memebers should be connected to internet). Here every marker shows latest user location sent to our servers. \n You can define an area by going Menu>Area And Geofences and click on add. In map you click on center of your desired location then specify circle radius by tapping on + and - buttons. By clicking Save you will asked for a name. By defining an area if your group members enter or leave area you will be informed.
        \n You can chat in groups.
    \n Its all free for geofence(entering and leaving area), and see user location(speed,curse,latitude,longitude and accuracy). </string>
    <string name="title_activity_routes" translatable="false">Map</string>
    <string name="routes">Routes</string>
    <string name="cantaddmoremarkers">Can not add more marker.</string>
    <string name="findroute">Find Route</string>
    <string name="clearmarkers">Clear Markers</string>
    <string name="nomarker">Atleast you should choose 2 markers.</string>
    <string name="chats">Chats</string>
    <string name="places">Places</string>
    <string name="upArrow">Up Arrow</string>
    <string name="downArrow">Down Arrow</string>
    <string name="clearAllEvents">Clear All Events</string>
    <string name="mute">Mute</string>
    <string name="language">Language</string>
    <string name="unmute">Unmute</string>
    <string name="gpsState">GPS state</string>
    <string name="offlinetracking2">Tracking</string>
    <string name="pausetracking">Tracking Paused </string>
    <string name="title_activity_offline_map" translatable="false">Map</string>
    <string name="offlinemap">Movement Direction</string>
    <string name="noMarkerData">No User Data, Please Try Again</string>
    <string name="offlinetrackingdescription">You can track your group mates in from choosed hour until next 1 hour.</string>
    <string name="nocreadit">You have no charge. Please recharge to use application.</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <string name="sos">SOS</string>
    <string name="entered">Entered</string>
    <string name="exited">Exited</string>
    <string name="PlaceDescription">-</string>
    <string name="groupNoCharge">Group has no enough charge.</string>
    <string name="sosMessage">Please contact me ASAP.I may need your help</string>
    <string name="maphint">Click to see map</string>
    <string name="successfulCahrge">Your account has been charged.</string>
    <string name="failedCahrge">Something wrong happened.</string>
    <string name="rial">Rial</string>
    <string name="satelliteAndInternetON">You are connected to internet. To reduce battery usage, put location state on wirless mode.</string>
    <string name="satelliteAndInternetOFF">You are not connected to internet. To better accuracy, put location state on satellite mode </string>
    <string name ="visibilityState">Location Visibility State To Own Group Members</string>
    <string name="ServerError">Server Error</string>
    <string name="title_activity_introduction" translatable="false">IntroductionActivity</string>
    <string name="skipit">Skip</string>
    <string name="introduction">Introduction</string>
    <string name="title_activity_help" translatable="false">HelpActivity</string>
    <string name="introfamily">See your family members online.</string>
    <string name="introschool">Schools Service</string>
    <string name="introtravel">Traveling</string>
    <string name="intromountain">Mountain CLimbing</string>
    <string name="intromarketing">Marketing Companies</string>
    <string name="introdelivery">Delivery Companies</string>
    <string name="introother">...</string>
    <string name="rateapp">Rate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="DoYouWantRateUs">Do you want to rate this application?</string>
    <string name="findaddress">Find Address</string>
    <string name="dontaskagain">Do not ask me again!</string>
    <string name="eventscleared">Event history is clean now.</string>
    <string name="radioen" translatable="false">1</string>
    <string name="radiofa" translatable="false">0</string>
</resources>
