<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ir.tsip.tracker.zarrintracker.about">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arm" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madeBy"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:id="@+id/txtmadeBY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appShortDescribe"
        android:layout_below="@+id/txtmadeBY"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:id="@+id/txtShortDEscription"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/txtShortDEscription"
        android:layout_centerHorizontal="true">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="15sp" />
    </ScrollView>

</RelativeLayout>
