<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.tsip.tracker.zarrintracker.SettingActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BackColor"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="تنظیمات"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute"
        android:id="@+id/swchMute"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visibilityState"
        android:id="@+id/swchVisibilityState"
        android:layout_gravity="center_horizontal"
        android:singleLine="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/justadminsee"
        android:id="@+id/swchjustadminsee"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearAllEvents"
        android:id="@+id/btnClearAllEvents"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/rdbgLanguage"
        android:layout_margin="15dp"></RadioGroup>
</LinearLayout>
